--- a/templates/summary.html
+++ b/templates/summary.html
@@ -23,23 +23,8 @@
 					<span class="submit100-form-title p-b-43">
 						Voice to Text summarization
 					</span>
-					<label class="mr-2">Input Text</label>
+					<label class="mr-2">Ouput Summary</label>
 					<div class="wrap-input100">
-						<textarea type="text" class="input-text1" name = "input_text" id="inputText"></textarea>
-						<br>
-					</div>
-					<hr>
-					<div class="form-group mt-3">
-						<label class="mr-2">Upload your file:</label>
-			            <input type="file" name="file">
-			        </div>
-			         <hr>
-					<div class="container-submit100-form-btn">
-						<button class="submit100-form-btn" type="submit">
-							Submit
-						</button>
-					</div>
-					<div>
 						{{output}}
 					</div>				
 				</form>
