--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 					</div>
 					<hr>
 					<div class="form-group mt-3">
-						<label class="mr-2">Upload your file:</label>
+						<label class="mr-2">Upload your file: (Only .wav and .txt format)</label>
 			            <input type="file" name="file">
 			        </div>
 			         <hr>
